feat: 범위로 수를 입력한다